rename main -> theme

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -3,7 +3,8 @@ $text-color: #000;
 $link-default-color: #00e;
 $link-visited-color: #551abb;
 
-html, html[data-theme=false] {
+html,
+html[data-theme='false'] {
   background-color: $background-color;
   color: $text-color;
 
@@ -16,7 +17,7 @@ html, html[data-theme=false] {
   }
 }
 
-html[data-theme=true] {
+html[data-theme='true'] {
   background-color: invert($background-color);
   color: invert($text-color);
 
@@ -30,27 +31,27 @@ html[data-theme=true] {
 }
 
 @media (prefers-color-scheme: dark) {
-  html[data-theme=true] {
+  html[data-theme='true'] {
     background-color: invert($background-color);
     color: invert($text-color);
-  
+
     :link {
       color: invert($link-default-color);
     }
-  
+
     :visited {
       color: invert($link-visited-color);
     }
   }
 
-  html[data-theme=false] {
+  html[data-theme='false'] {
     background-color: $background-color;
     color: $text-color;
-  
+
     :link {
       color: $link-default-color;
     }
-  
+
     :visited {
       color: $link-visited-color;
     }
