--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <meta name="author" content="trackiss" />
     <meta name="generator" content="Jekyll" />
-    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="{{ '/assets/style.css' | relative_url }}" rel="stylesheet" />
   </head>
